[gd_scene load_steps=13 format=3 uid="uid://dui7577q0pfbf"]

[ext_resource type="PackedScene" uid="uid://dnwuogk3qx34q" path="res://navigation_goblin.tscn" id="1_m6uql"]
[ext_resource type="Script" path="res://nav_goblin_testscene.gd" id="1_yuckl"]
[ext_resource type="PackedScene" uid="uid://bwi2cip47a6yq" path="res://TilemapCollection.tscn" id="4_f0qxx"]
[ext_resource type="PackedScene" uid="uid://dsjwy0ogftvi" path="res://Game/Player/worker.tscn" id="4_qsf12"]
[ext_resource type="PackedScene" uid="uid://q2lhnl4x8bgr" path="res://foam_animation_parent.tscn" id="5_b4kd8"]
[ext_resource type="PackedScene" uid="uid://gkjo8nl0byar" path="res://Game/Player/knight_nav.tscn" id="6_pg1o4"]
[ext_resource type="PackedScene" uid="uid://wdhhntdxisic" path="res://Game/Buildings/base_castle.tscn" id="6_t6skt"]
[ext_resource type="PackedScene" uid="uid://dpi3jmc1unbuh" path="res://Game/Buildings/gold_mine.tscn" id="8_0gjid"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_mubjo"]
vertices = PackedVector2Array(1711, 126, 1724, 101, 1733, 93, 1617, 967, 1596, 958, 1515, 252, 1524, 273, 1390, 987, 1241, 918, 9, 34, 15, 46, -1, 717, -10, 724, 9, 480, 6, 663, 1252, 632, 1108, 924, 1106, 843, 1133, 441, 764, 1320, 785, 909, 837, 911, 852, 983, 548, 165, 714, 156, 741, 444, 546, 277, 377, 591, 371, 524, 562, 632, 1393, 1293, 762, 1336, 1034, 989, 292, 484, 1245, 243, 1517, 441, 1422, 444, 857, 840)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 1, 0, 6), PackedInt32Array(4, 3, 7, 8), PackedInt32Array(9, 2, 1, 10), PackedInt32Array(11, 12, 9, 10, 13, 14), PackedInt32Array(15, 8, 16, 17, 18), PackedInt32Array(19, 20, 21, 22), PackedInt32Array(23, 24, 25, 26), PackedInt32Array(27, 28, 26, 25, 29), PackedInt32Array(16, 8, 7, 30, 31, 32), PackedInt32Array(22, 32, 31, 19), PackedInt32Array(19, 31, 12, 11), PackedInt32Array(27, 14, 13, 33, 28), PackedInt32Array(34, 5, 6, 35, 36, 18), PackedInt32Array(20, 29, 25, 18, 37), PackedInt32Array(37, 21, 20), PackedInt32Array(17, 37, 18), PackedInt32Array(36, 15, 18)])
outlines = Array[PackedVector2Array]([PackedVector2Array(762, 1336, -10, 724, 9, 34, 1733, 93, 1617, 967, 1390, 987, 1393, 1293), PackedVector2Array(6, 663, 377, 591, 562, 632, 785, 909, 764, 1320, -1, 717), PackedVector2Array(837, 911, 852, 983, 1034, 989, 1108, 924, 1106, 843, 857, 840), PackedVector2Array(1241, 918, 1252, 632, 1422, 444, 1517, 441, 1524, 273, 1711, 126, 1596, 958), PackedVector2Array(1515, 252, 1245, 243, 1133, 441, 741, 444, 714, 156, 548, 165, 546, 277, 371, 524, 292, 484, 9, 480, 15, 46, 1724, 101)])

[sub_resource type="Curve2D" id="Curve2D_ft104"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 817, 1263, 0, 0, 0, 0, 1358, 1261, 0, 0, 0, 0, 1358, 1077, 0, 0, 0, 0, 831, 1083, 0, 0, 0, 0, 817, 1263)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_ygnsj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 26, 644, 0, 0, 0, 0, 269, 644, 0, 0, 0, 0, 264, 477, 0, 0, 0, 0, 13, 480, 0, 0, 0, 0, 26, 644)
}
point_count = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_8f8vy"]

[node name="Level_nav" type="Node"]
script = ExtResource("1_yuckl")
mob_scene = ExtResource("1_m6uql")
knight_scene = ExtResource("6_pg1o4")
worker_scene = ExtResource("4_qsf12")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(9, -2)
navigation_polygon = SubResource("NavigationPolygon_mubjo")

[node name="TileMapCollection" parent="." instance=ExtResource("4_f0qxx")]

[node name="Foam_Animation_Parent" parent="." instance=ExtResource("5_b4kd8")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ft104")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(817, 1263)
rotation = -0.00369684

[node name="SpawnKnightButton" type="Button" parent="."]
offset_left = 1825.0
offset_top = 1079.0
offset_right = 2179.0
offset_bottom = 1276.0
mouse_default_cursor_shape = 3
action_mode = 0
keep_pressed_outside = true
text = "Spawn Knight
(Spawn at mouse cursor on release)"

[node name="MobPath2" type="Path2D" parent="."]
curve = SubResource("Curve2D_ygnsj")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath2"]
position = Vector2(26, 644)

[node name="BaseCastle" parent="." instance=ExtResource("6_t6skt")]
position = Vector2(609, 298)

[node name="SpawnWorkerButton" type="Button" parent="."]
offset_left = 1612.0
offset_top = 1079.0
offset_right = 1819.0
offset_bottom = 1278.0
text = "Spawn Worker at Base"

[node name="GoldMine" parent="." instance=ExtResource("8_0gjid")]
position = Vector2(1300, 390)

[node name="Worker_3rd_pos" type="StaticBody2D" parent="."]
position = Vector2(1240, 525)

[node name="Worker_3rd_pos" type="Area2D" parent="Worker_3rd_pos"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Worker_3rd_pos/Worker_3rd_pos"]
shape = SubResource("CircleShape2D_8f8vy")

[node name="Marker" type="Marker2D" parent="Worker_3rd_pos/Worker_3rd_pos"]

[node name="Worker_4rd_pos" type="StaticBody2D" parent="."]
position = Vector2(625, 490)

[node name="Worker_4rd_pos" type="Area2D" parent="Worker_4rd_pos"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Worker_4rd_pos/Worker_4rd_pos"]
shape = SubResource("CircleShape2D_8f8vy")

[node name="Marker" type="Marker2D" parent="Worker_4rd_pos/Worker_4rd_pos"]

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 2098.0
offset_top = 9.0
offset_right = 2336.0
offset_bottom = 60.0

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="button_up" from="SpawnKnightButton" to="." method="_on_spawn_knight_button_button_up"]
[connection signal="pressed" from="SpawnWorkerButton" to="." method="_on_spawn_worker_button_pressed"]
